# schedulix-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  run.sh
src/: main.cpp
